# croupier

./: .croupier.json  .gitignore  CLAUDE.md  README.md  TODO.md  demo.py  main.py  mise.toml  prek.toml  pyproject.toml  pyrightconfig.json
.claude/: launch.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  check-pr-title.yml  ci.yml
runner/: README.md  main.py  pyproject.toml
src/croupier/: main.py
tests/: conftest.py  test_main.py
